Fix tiptap loading and slash menu z-index

--- a/src/app/styles/tiptap.css
+++ b/src/app/styles/tiptap.css
@@ -10,3 +10,7 @@
 .tiptap img.ProseMirror-selectednode {
   outline: solid 2px var(--color-primary);
 }
+
+.tiptap.ProseMirror *:first-child {
+  margin-top: 0 !important;
+}
